# c0bc

./: .gitignore  Cargo.toml  README.md
.github/: clippy.yml  linux-test.yml
.github/workflows/: ci.yml  clippy.yml  linux-test.yml  main.yml  windows-test.yml
node/: Cargo.toml  README.md
node/src/: main.rs
server/: Cargo.toml  README.md
server/src/: main.rs
