[package]
name = "server"
version = "0.1.0"
readme = "README.md"
authors = [""]
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
structopt = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"